traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:7: error: ';' expected but ',' found.
      setPos(getX()+1,getY()), ecritMessage(cpt);
                             ^