traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  var cpt: Int = 0
  var dir: Int = 0
  ecritMessage(cpt);
  while (getMondeHauteur()-1 != getY() || getMondeLargeur()-1 != getX()) {
    cpt += 1;
    if (dir == 0 && getX()!=getMondeLargeur()-1) {
      setPos(getX()+1,getY()), ecritMessage(cpt);
    }
  }
}